# jsonc

./: Cargo.toml
data/: citm_catalog.json
src/: decoder.rs  lib.rs  parser.rs  serde.rs  slice.rs  utils.rs  value.rs
tests/: parser.rs  parser_and_decoder.rs  query.rs
